# gogh

./: CODE_OF_CONDUCT.md  README.md  build.sh  config.yml  gogh  gogh.nimble  main.nim  meson.build  nim.cfg  shell.nix
.cache/clangd/index/: fragment.h.F96FFEB4D5151AD1.idx  globals.cc.53295AD455E7FA31.idx  globals.cc.B2C26F383D1C222F.idx  globals.cpp.4FAF48B3BA28719E.idx  globals.cxx.2C11E8333B07F295.idx  globals.h.8B566F8C767476E5.idx  globals.h.920CBD85ED282CB9.idx  gogh_bar.cc.83B4B7FB7581041E.idx  gogh_bar.cc.FC2877807AF2EAF6.idx  gogh_bar.h.15C47872A8B66AED.idx  (+50 more)
src/: Compositor.cpp  Compositor.h  Output.cpp  compositor.nim  config.nim  globals.cc  globals.h  globals.nim  gogh.nim  gogh_bar.cc  gogh_bar.h  gogh_compositor.cc  gogh_compositor.h  gogh_dndmgr.cc  gogh_dndmgr.h  gogh_keyboard.cc  gogh_keyboard.h  gogh_output.cc  gogh_output.h  gogh_pointer.cc  gogh_pointer.h  gogh_seat.cc  gogh_seat.h  gogh_surface.cc  gogh_surface.h  gogh_toplevel.cc  gogh_toplevel.h  keybind.nim  keyboard.nim  layout.nim  louvre.nim  main.cc  main.cpp  output.nim  pointer.nim  sugar.nim  surface.nim  utils.cc  utils.h  workspace.nim
src/libxkbcommon/: evdev_scancodes.c  evdev_scancodes.nim  keysyms.c  keysyms.nim
src/louvre/: colors.nim  compositor.nim  event.nim  factory_object.nim  gpu.nim  keyboard.nim  keyboard_key_event.nim  launcher.nim  layer_view.nim  log.nim  namespaces.nim  output.nim  point.nim  scene.nim  scene_view.nim  seat.nim  submodule.nim  surface.nim  toplevel.nim  utils.nim  view.nim
src/shaders/: fragment.h  shader.frag  shader.vert
